crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_lazy_future_import.py_3.15.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: lazy from __future__ import is not allowed
 --> resources/test/fixtures/semantic_errors/lazy_future_import.py:1:1
  |
1 | lazy from __future__ import annotations
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | from __future__ import generator_stop
